--- a/style.css
+++ b/style.css
@@ -1,1 +1,46 @@
+*{
+    padding: 0;
+    margin: 0;
+    text-decoration: 0;
+}
 
+body{
+    background-color: rgb(215, 135, 250);
+}
+header{
+    border: 1px solid black;
+    display: flex;
+    justify-content: center;
+}
+
+header div{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 90px;
+
+} 
+main{
+    display: :flex;
+    justify-content: center;
+}
+
+    
+
+.container{
+    width: 80%;
+    border: 1px solid orange;
+}
+
+header img{
+    width: 80%;
+    
+}
+
+nav{
+    display: flex;
+    gap: 15px;
+}
+section{
+    width: 550px;
+}
